# file_ini

./: .gitignore  CMakeLists.txt  ReadFileIni.cpp  ReadFileIni.h  file.h  main.cpp  version.h
test/: CMakeLists.txt  ReadFileiniTest.cpp  runAllTest.cpp  test.ini
